--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,58 @@
+//plugins {
+//    id 'java'
+//    id 'war'
+//    id 'org.springframework.boot' version '2.7.18'
+//    id 'io.spring.dependency-management' version '1.1.5'
+//}
+//
+//group = 'com.medison'
+//version = '0.0.1-SNAPSHOT'
+//
+//java {
+//    toolchain {
+//        languageVersion = JavaLanguageVersion.of(11)
+//    }
+//}
+//
+//configurations {
+//    compileOnly {
+//        extendsFrom annotationProcessor
+//    }
+//}
+//
+//repositories {
+//    mavenCentral()
+//}
+//
+//dependencies {
+//    // spring boot web
+//    implementation 'org.springframework.boot:spring-boot-starter-web'
+//    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+//    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+//
+//    //java
+//    compileOnly 'org.projectlombok:lombok'
+//    annotationProcessor 'org.projectlombok:lombok'
+//
+//    //test
+//    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+//
+//    //data
+//    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+//    implementation 'com.oracle.database.jdbc:ojdbc8:21.3.0.0'
+//
+//    //jsp
+//    implementation 'javax.servlet:jstl:1.2'
+//    implementation 'taglibs:standard:1.1.2'
+//    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:9.0.87'
+//
+//
+//}
+//
+//tasks.named('test') {
+//    useJUnitPlatform()
+//}
+
 plugins {
     id 'java'
     id 'war'
@@ -5,7 +60,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.5'
 }
 
-group = 'com.example'
+group = 'com.pacs'
 version = '0.0.1-SNAPSHOT'
 
 java {
@@ -25,7 +80,7 @@ repositories {
 }
 
 dependencies {
-    // spring boot web
+        // spring boot web
     implementation 'org.springframework.boot:spring-boot-starter-web'
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -52,3 +107,26 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+tasks.withType(JavaCompile) {
+    options.incremental = true
+}
+
+tasks.withType(AbstractArchiveTask) {
+    outputs.cacheIf { true }
+}
+
+tasks.register('webpackBuild', Exec) {
+    workingDir = file('src/main/resources/static')
+    commandLine 'C:/Program Files/nodejs/npm.cmd', 'run', 'build'
+    environment 'PATH', System.getenv('PATH')
+    inputs.dir 'src/main/resources/static'
+    outputs.dir 'build/resources/main/static'
+    standardOutput = new ByteArrayOutputStream()
+    errorOutput = standardOutput
+    doLast {
+        println standardOutput.toString()
+    }
+}
+
+processResources.dependsOn tasks.named('webpackBuild')
