--- a/build.gradle
+++ b/build.gradle
@@ -51,4 +51,27 @@ dependencies {
 
 tasks.named('test') {
     useJUnitPlatform()
+
 }
+
+tasks.withType(JavaCompile) {
+    options.incremental = true
+}
+
+tasks.withType(AbstractArchiveTask) {
+    outputs.cacheIf { true }
+}
+
+tasks.register('webpackBuild', Exec) {
+    workingDir = file('src/main/resources/static')
+    commandLine 'npm.cmd', 'run', 'build'
+    environment 'PATH', System.getenv('PATH')
+    inputs.dir 'src/main/resources/static'
+    outputs.dir 'build/resources/main/static'
+    standardOutput = new ByteArrayOutputStream()
+    errorOutput = standardOutput
+    doLast {
+        println standardOutput.toString()
+    }
+}
+processResources.dependsOn tasks.named('webpackBuild')
