--- a/build.gradle
+++ b/build.gradle
@@ -25,33 +25,31 @@ repositories {
 }
 
 dependencies {
-        // spring boot web
+    // Spring Boot Web
     implementation 'org.springframework.boot:spring-boot-starter-web'
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-    //java
+    // Java
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
-    //test
+    // Test
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
-    //data
+    // Data
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'com.oracle.database.jdbc:ojdbc8:21.3.0.0'
+    implementation 'mysql:mysql-connector-java:8.0.33'
 
-    //jsp
+    // JSP
     implementation 'javax.servlet:jstl:1.2'
     implementation 'taglibs:standard:1.1.2'
     implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:9.0.87'
-
-
 }
 
 tasks.named('test') {
     useJUnitPlatform()
-
 }
 
 tasks.withType(JavaCompile) {
