--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     implementation 'javax.servlet:jstl:1.2'
     implementation 'taglibs:standard:1.1.2'
     implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:9.0.87'
+
+    implementation 'com.itextpdf:itext7-core:7.2.0'
 }
 
 tasks.named('test') {
